# nature-of-code-haskell

./: .gitignore  LICENSE  NatureOfCode.cabal  README.md  gengif.sh  shell.nix  stack.yaml
src/: Main.hs  TemplatePlay.hs  TemplateSimulate.hs
src/Fractals/DynamicRecursiveTree/: README.md  Sketch.hs
src/Fractals/RecursiveTree/: README.md  Sketch.hs
src/Introduction/AnimatedPerlinNoise2D/: README.md  Sketch.hs
src/Introduction/CustomDistributionWalker/: README.md  Sketch.hs
src/Introduction/DynamicRandomWalker/: README.md  Sketch.hs
src/Introduction/GaussianDistribution/: README.md  Sketch.hs
src/Introduction/GaussianRandomWalk/: README.md  Sketch.hs
src/Introduction/PaintSplatter/: README.md  Sketch.hs
src/Introduction/PerlinNoise2D/: Sketch.hs
src/Introduction/PerlinNoise2DInteractive/: README.md
src/Introduction/PerlinNoise3D/: README.md  Sketch.hs
src/Introduction/PerlinNoiseGraph/: README.md  Sketch.hs
src/Introduction/PerlinNoiseStepSizeWalker/: README.md  Sketch.hs
src/Introduction/PerlinNoiseWalker/: README.md  Sketch.hs
src/Introduction/RandomNumberDistribution/: README.md  Sketch.hs
src/Introduction/TraditionalRandomWalk/: README.md  Sketch.hs
src/Introduction/WalkerThatTendsToTheRight/: README.md  Sketch.hs
src/NatureOfCode/: Picture.hs  Util.hs
src/Vectors/BouncingBall3D/: README.md  Sketch.hs
src/Vectors/BouncingBallWithNoVectors/: README.md  Sketch.hs
src/Vectors/BouncingBallWithVectors/: README.md  Sketch.hs
src/Vectors/DynamicRandomWalkerWithVectors/: README.md  Sketch.hs
src/Vectors/VectorMagnitude/: README.md  Sketch.hs
src/Vectors/VectorMultiplication/: README.md  Sketch.hs
src/Vectors/VectorSubtraction/: README.md  Sketch.hs
